--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 02-intro-javascript/node_modules
 03-counter-app/node_modules
 04-gif-expert-app/node_modules
+05-hook-app/node_modules
 
 # testing
 /coverage
