--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 03-counter-app/node_modules
 04-gif-expert-app/node_modules
 05-hook-app/node_modules
+06-heroes-app/node_modules
+07-journal-app/node_modules
 
 # testing
 /coverage
