--- a/07-journal-app/package.json
+++ b/07-journal-app/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "cloudinary": "^1.26.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2"
   }
