--- a/07-journal-app/package.json
+++ b/07-journal-app/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.0.19",
     "validator": "^13.6.0",
