Test in startLoadingNotes and startSaveNote

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
 .env.test.local
+.env.test
 .env.production.local
 
 npm-debug.log*
